sharing changes